<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/teleprompter_activity_padding"
    tools:context="com.husenansari.theprompter.TeleprompterActivity">

  <ImageView
      android:id="@+id/scheme_chooser"
      style="@style/TelePrompter.PropertyIcon"
      android:layout_alignParentEnd="true"
      android:layout_alignParentTop="true"
      android:layout_gravity="end"
      android:contentDescription="@string/choose_color"
      android:onClick="showColorSchemeChooser"
      android:src="@drawable/color_lens_white"/>

  <TextView
      android:layout_below="@+id/scheme_chooser"
      android:layout_above="@+id/bottom_bar"
      android:id="@+id/content"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center_horizontal"
      android:scrollbars="vertical"/>

  <LinearLayout
      android:id="@+id/bottom_bar"
      android:layout_alignParentBottom="true"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="horizontal">

      <ImageView
          android:id="@+id/reduce_speed"
          style="@style/TelePrompter.PropertyIcon"
          android:contentDescription="@string/reduce_speed"
          android:src="@drawable/fast_rewind"
          android:tag="speed_decrease"/>

      <TextView
          android:id="@+id/speed_display"
          style="@style/TelePrompter.PropertyStatus"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>

      <ImageView
          style="@style/TelePrompter.PropertyIcon"
          android:contentDescription="@string/increase_speed"
          android:src="@drawable/fast_forward"
          android:tag="speed_increase"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/play"
        style="@style/TelePrompter.PropertyIcon"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/play"
        android:src="@drawable/play_circle_outline"
        android:tag="play"/>

    <ImageView
        android:id="@+id/pause"
        style="@style/TelePrompter.PropertyIcon"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/pause"
        android:src="@drawable/pause_circle_outline"
        android:tag="pause"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="end"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <ImageView
          android:id="@+id/decrease_size"
          style="@style/TelePrompter.PropertyIcon"
          android:contentDescription="@string/reduce_size"
          android:src="@drawable/zoom_out_white"
          android:tag="text_size_decrease"/>

      <TextView
          android:id="@+id/size_display"
          style="@style/TelePrompter.PropertyStatus"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>

      <ImageView
          style="@style/TelePrompter.PropertyIcon"
          android:contentDescription="@string/increase_size"
          android:src="@drawable/zoom_in_white"
          android:tag="text_size_increase"/>
    </LinearLayout>
  </LinearLayout>
</RelativeLayout>
